add api self_user_info
